Fix Alignment Bug for Highlight Cards
 Fixed alignment bug, where short screen would cause highlight cards to shrink to undesired size and cause overflow.

--- a/src/app/components/ui/weather-highlight-cards/sunrise-sunset-card/sunrise-sunset-card.component.css
+++ b/src/app/components/ui/weather-highlight-cards/sunrise-sunset-card/sunrise-sunset-card.component.css
@@ -1,6 +1,6 @@
 /* This rule allows host element to dynamically get space in parent flex container */
 :host {
-    flex: 1 1 186px;
+    flex: 1 0 186px;
     max-width: 186px;
 }
 
