--- a/src/app/components/ui/weather-highlight-section/weather-highlight-section.component.css
+++ b/src/app/components/ui/weather-highlight-section/weather-highlight-section.component.css
@@ -19,4 +19,9 @@ h2 {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    gap: 25px;
+
+    /* Making container scrollable */
+    overflow: auto;
+    white-space: nowrap;
 }
